# pge

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/controller/: CMakeLists.txt  controller-example.c
examples/image/: CMakeLists.txt  image-example.c
examples/music/: CMakeLists.txt  music-example.c
examples/pixel/: CMakeLists.txt  pixel-example.c
examples/primitives/: CMakeLists.txt  primitives-example.c
examples/sound/: CMakeLists.txt  sound-example.c
examples/text/: CMakeLists.txt  text-example.c
pge/: CMakeLists.txt
pge-lua/: CMakeLists.txt  pge-lua.c  test.lua
pge/include/private/: defines.h  primitive-font.h
pge/include/public/: color.h  pixel-game-engine.h
pge/source/: controller.c  core.c  event.c  font.c  image.c  music.c  primitives.c  sound.c  system.c  text.c  window.c
