include(GNUInstallDirs)
include(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer>=2.0.0)
FIND_PACKAGE(Lua 5.3 EXACT)
IF (LUA_FOUND)
    MESSAGE(STATUS "Using Lua ${LUA_VERSION_STRING}")
ENDIF()


set(THIS ${PROJECT_NAME}_lua)

set(SOURCE_FILES pge-lua.c)
    
add_library(${THIS} SHARED ${SOURCE_FILES})

target_include_directories(${THIS} PRIVATE
    "../pge/include/public"
    "../pge/include/private"
    ${SDL2_INCLUDE_DIRS}
    ${SDL2IMAGE_INCLUDE_DIRS}
    ${SDL2TTF_INCLUDE_DIRS}
    ${SDL2MIXER_INCLUDE_DIRS})

target_link_libraries(${THIS} PRIVATE
    ${SDL2_LIBRARIES}
    ${SDL2IMAGE_LIBRARIES}
    ${SDL2TTF_LIBRARIES}
    ${SDL2MIXER_LIBRARIES}
    lua5.3 
    pge)

target_compile_definitions(${THIS} PRIVATE
    PGE_MAJOR_VERSION=${PROJECT_VERSION_MAJOR}
    PGE_MINOR_VERSION=${PROJECT_VERSION_MINOR})

set_target_properties(${THIS} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

install(TARGETS ${THIS} LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}/")